# test-grenad-parameters

./: Cargo.toml  README.md
src/: main.rs
