[package]
name = "test-grenad"
description = "A simple binary that tests the grenad immutable kv-store with different parameters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.47"
clap = "3.0.0-beta.5"
gabble = "0.1.1"
grenad = { git = "https://github.com/Kerollmops/grenad", branch = "avoid-copying-too-much", features = ["lz4"] }
heed = { git = "https://github.com/Kerollmops/heed", branch = "v0.13" }
indicatif = { version = "0.16.2", features = ["rayon"] }
memmap2 = "0.5.0"
rand = "0.8.4"
rayon = "1.5.1"
roaring = "0.8.1"
